--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 
 .bg-main {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-image:
         linear-gradient(
             45deg,
